WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190900
[WPE][GTK] Follow-up fixes to the certificate coders
https://bugs.webkit.org/show_bug.cgi?id=190900
Summary
[WPE][GTK] Follow-up fixes to the certificate coders
Claudio Saavedra
Reported
2018-10-25 02:51:32 PDT
[WPE][GTK] Follow-up fixes to the certificate coders
Attachments
Patch
(3.89 KB, patch)
2018-10-25 02:52 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.89 KB, patch)
2018-10-25 08:07 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2018-10-25 02:52:35 PDT
Created
attachment 353080
[details]
Patch
Michael Catanzaro
Comment 2
2018-10-25 07:42:29 PDT
Comment on
attachment 353080
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=353080&action=review
Yeah, this looks better!
> Source/WebKit/ChangeLog:11 > + cropped chain. > + * Shared/soup/WebCoreArgumentCodersSoup.cpp:
Missing blank line here
Claudio Saavedra
Comment 3
2018-10-25 08:07:11 PDT
Created
attachment 353084
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2018-10-25 08:55:00 PDT
The commit-queue encountered the following flaky tests while processing
attachment 353084
[details]
: http/wpt/css/css-animations/start-animation-001.html
bug 190903
(authors:
dino@apple.com
,
fred.wang@free.fr
, and
graouts@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2018-10-25 08:55:42 PDT
Comment on
attachment 353084
[details]
Patch for landing Clearing flags on attachment: 353084 Committed
r237415
: <
https://trac.webkit.org/changeset/237415
>
WebKit Commit Bot
Comment 6
2018-10-25 08:55:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug