[WPE][GTK] Follow-up fixes to the certificate coders https://bugs.webkit.org/show_bug.cgi?id=190900

Reviewed by Michael Catanzaro.

Cleanup the GRefPtr mess I created earlier. Also we now bail out
if any certificate in the chain has no data instead of returning a
cropped chain.

* Shared/soup/WebCoreArgumentCodersSoup.cpp:
(IPC::ArgumentCoder<CertificateInfo>::encode):
(IPC::ArgumentCoder<CertificateInfo>::decode):


Canonical link: https://commits.webkit.org/205756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237415 268f45cc-cd09-0410-ab3c-d52691b4dbfc